<resources>
    <string name="app_name">CuddleBug</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_login">Login</string>
    <string name="name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirmed Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_my_list">My List</string>
    <string name="title_explore_movies">Explore Movies</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="display_name">Display Name:</string>
    <string name="email">eMail:</string>
    <string name="user_settings">User Settings</string>
    <string name="add_friends">Add Friends</string>
    <string name="friends">Friends</string>
    <string name="common_movies">Movies in Common</string>
    <string name="loading">Generating Watchlist...</string>
    <string name="instructions1"><b>Instructions:</b>\n \n<b>Explore Movies:</b>\nDrag or swipe the movie poster right to like and left to dislike. Movies are generated asynchronously\n \n<b>Settings:</b>\nClick on the three stripes above to logout or access friends functionality. On the add friends page, a list of friends appears where each can be clicked and added to your friend list.</string>
    <string name="instructions2">\n\n<b>My List:</b>\nContains a list of the movies you\'ve liked previously by swiping right on posters in the Explore Movies section</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_register">REGISTER</string>
</resources>
