<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mylist">

    <fragment
        android:id="@+id/navigation_mylist"
        android:name="com.example.netflixmatchmaker.ui.my_list.My_List_Fragment"
        android:label="@string/title_my_list"
        tools:layout="@layout/fragment_my_list" />

    <fragment
        android:id="@+id/navigation_explore_movies"
        android:name="com.example.netflixmatchmaker.ui.explore_movies.Explore_Movies_Fragment"
        android:label="@string/title_explore_movies"
        tools:layout="@layout/fragment_explore_movies" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.netflixmatchmaker.ui.settings.Settings_Fragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>